# photo-organizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/plans/: github-actions-branch-protection-setup.md
openspec/changes/archive/2026-02-20-add-move-mode/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-20-add-move-mode/specs/file-transfer-mode/: spec.md
photo_organizer/: __init__.py  __main__.py  cli.py  date_resolver.py  duplicates.py  organizer.py  scanner.py  utils.py
photo_organizer/extractors/: __init__.py  base.py  exif.py  fallback.py  filename.py
tests/: test_cli.py  test_date_resolver.py  test_duplicates.py  test_integration.py  test_organizer.py  test_scanner.py  test_utils.py
tests/extractors/: test_base.py  test_exif.py  test_fallback.py  test_filename.py
