[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-organizer"
version = "0.1.0"
description = "Organize photo and video files by date and camera model"
requires-python = ">=3.8"
dependencies = [
    "Pillow>=10.0.0",
]

[project.scripts]
photo-organizer = "photo_organizer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["photo_organizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
